--- a/web/userHome.html
+++ b/web/userHome.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8"/>
-		<title>Layui选项卡Demo</title>
+		<title>企业人员绩效管理系统</title>
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="layui/css/layui.css"/>
 		<script src="js/jquery-3.4.1.js"></script>
