--- a/web/userRegister.html
+++ b/web/userRegister.html
@@ -48,7 +48,7 @@
         font-size: 26px;
     }
 </style>
-<form class="layui-form">
+<form class="layui-form" action="http://localhost:8080/System_war_exploded/registerServlet" method="post" >
     <div class="demo-reg-container">
         <div class="layui-form-item">
             <div class="layui-row">
