--- a/web/userHome.html
+++ b/web/userHome.html
@@ -139,7 +139,7 @@
 			});
 
 			//打开默认页面
-			active.tabAdd("userInfo.html", 11, "个人中心");
+			active.tabAdd("http://localhost:8080/System_war_exploded/userInfoServlet", 11, "个人中心");
 			active.tabChange(11);
 		});
 		</script>
@@ -163,7 +163,7 @@
 						<li class="layui-nav-item layui-nav-itemed">
 							<a class="" href="javascript:void(0);">用户管理</a>
 							<dl class="layui-nav-child">
-								<dd><a data-url="userInfo.html" data-id="11" data-title="个人中心" href="javascript:void(0);"
+								<dd><a data-url="userInfo.jsp" data-id="11" data-title="个人中心" href="javascript:void(0);"
 								       class="site-demo-active"
 								       data-type="tabAdd">个人中心</a></dd>
 								<dd><a data-url="userPerformance.html" data-id="12" data-title="绩效信息" href="javascript:void(0);"
