员工绩效信息显示

--- a/web/userHome.html
+++ b/web/userHome.html
@@ -166,7 +166,7 @@
 								<dd><a data-url="http://localhost:8080/System_war_exploded/userInfoServlet" data-id="11" data-title="个人中心" href="javascript:void(0);"
 								       class="site-demo-active"
 								       data-type="tabAdd">个人中心</a></dd>
-								<dd><a data-url="userPerformance.html" data-id="12" data-title="绩效信息" href="javascript:void(0);"
+								<dd><a data-url="http://localhost:8080/System_war_exploded/userPerformanceInfoServlet" data-id="12" data-title="绩效信息" href="javascript:void(0);"
 								       class="site-demo-active"
 								       data-type="tabAdd">绩效信息</a></dd>
 								<dd><a data-url="userWork_logs.html" data-id="13" data-title="个人日志" href="javascript:void(0);"
