--- a/web/userHome.html
+++ b/web/userHome.html
@@ -169,7 +169,7 @@
 								<dd><a data-url="http://localhost:8080/System_war_exploded/userPerformanceInfoServlet" data-id="12" data-title="绩效信息" href="javascript:void(0);"
 								       class="site-demo-active"
 								       data-type="tabAdd">绩效信息</a></dd>
-								<dd><a data-url="userWork_logs.html" data-id="13" data-title="个人日志" href="javascript:void(0);"
+								<dd><a data-url="http://localhost:8080/System_war_exploded/userWork_logsInfoServlet" data-id="13" data-title="个人日志" href="javascript:void(0);"
 								       class="site-demo-active"
 								       data-type="tabAdd">个人日志</a></dd>
 							</dl>
