个人打卡信息展示

--- a/web/userHome.html
+++ b/web/userHome.html
@@ -177,7 +177,7 @@
 						<li class="layui-nav-item">
 							<a class="" href="javascript:void(0);">考勤</a>
 							<dl class="layui-nav-child">
-								<dd><a data-url="userAttendance.html" data-id="21" data-title="每日打卡" href="javascript:void(0);"
+								<dd><a data-url="http://localhost:8080/System_war_exploded/userAttendanceInfoServlet" data-id="21" data-title="每日打卡" href="javascript:void(0);"
 								       class="site-demo-active"
 								       data-type="tabAdd">每日打卡</a></dd>
 								<dd><a data-url="userLeave.html" data-id="22" data-title="请假" href="javascript:void(0);"
